cluster/apps/ladder/client-service.yaml
---
apiVersion: v1 
kind: Service
metadata:
  name: ladder-client
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP 
      nodePort: 3100
  selector:
    app: ladder-client
