cluster/apps/ladder/ladder-ingress.yaml
---
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: ladder-ingress
  namespace: prod
  annotations:
    nkubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$
    cert-manager.io/cluster-issuer: "letsencrypt-staging"

spec:
  hostname: icoolyousuck.com
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            frontend:
              service:
                name: frontend-service
                port:
                  number: 3000
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 4000
